--- a/scss/device/home/_homeMobile.scss
+++ b/scss/device/home/_homeMobile.scss
@@ -130,8 +130,12 @@ $color2: rgb(198,164,126);
     .hDestination {
         display: flex;
         flex-direction: column;
+        align-items: center;
         row-gap: 2vh;
         width: 90%;
+        > article {
+            width: 40vh;
+        }
         > section {
             display: flex;
             justify-content: center;
@@ -191,4 +195,99 @@ $color2: rgb(198,164,126);
         }
     }
     //END: PopulardDestination section
+     //START: Special offer section
+    .specialOffer {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 2vh;
+        align-items: center;
+        > article {
+            width: 40vh;
+        }
+        button {
+            height: 25vh;
+            width: 3vh;
+            background-color: $color2;
+        }
+        i {
+            font-size: 24px;
+        }
+        .hSpe2,
+        .hSpe3 {
+            display: none;
+        }
+        >section {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            column-gap: 1vh;
+            > section {
+                display: flex;
+                justify-content: center;
+                column-gap: 2vh;
+            }
+            article {
+                border: 1px solid $color2;
+                border-top: none;
+                display: flex;
+                flex-direction: column;
+                row-gap: 1vh;
+                align-items: center;
+                text-align: center;
+                color: black;
+                padding-top: 2vh;
+                > section {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-evenly;
+                }
+                aside {
+                    display: flex;
+                    align-items: center;
+                    column-gap: 1vh;
+                }
+                p {
+                    width: 90%;
+                }
+            }
+        } 
+        a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 38vh;
+        }
+        figure {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+        img {
+            width: 100%;
+            height: 25vh;
+        }
+        figcaption {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 95%;
+            padding-top: 1vh;
+            span {
+                background-color: $color2;
+                padding: 5px;
+            }
+            h4 {
+                color: whitesmoke;
+            }
+            i {
+                color: orange;
+                font-size: 30px;
+            }
+        }
+    }
+    //END: Special Offer Section section
 }
