--- a/scss/device/home/_homeTablet.scss
+++ b/scss/device/home/_homeTablet.scss
@@ -1,8 +1,4 @@
 @media (min-width: $tabletScreen){
-    .fornow {
-        background-color: blue;
-        width: 100%;
-    }
     //START: Form section
     .hLayer {
         padding-left: 10%;
@@ -27,6 +23,9 @@
     //END: Form section
     //START: Popular destination section
     .hDestination {
+        > article {
+            width: 70vh;
+        }
         .hBurnaby {
             display: flex;
             flex-direction: column-reverse;
@@ -78,4 +77,33 @@
         }
     }
     //END: Popular destination section
+    //START: Special offer section
+    .specialOffer {
+        > article {
+            width: 70vh;
+        }
+        a {
+            transition: .4s;
+            width: 32vh;
+            &:hover {
+                background-color: $color2;
+            }
+            i {
+                transition: .4s;
+                &:hover {
+                    color: red;
+                }
+            }
+        }
+        .hSpe2 {
+            display: flex;
+        }
+        button {
+            transition: .4s;
+            &:hover {
+                background-color: whitesmoke;
+            }
+        }
+    }
+    //END: Special offer section
 }
