--- a/scss/device/home/_homeMobile.scss
+++ b/scss/device/home/_homeMobile.scss
@@ -9,7 +9,7 @@ $color2: rgb(198,164,126);
     }
     //START: Form section
     .hForm {
-        background-image: url(/home/hFormBG.jpg);
+        background-image: url(../home/hFormBG.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
