--- a/scss/device/result/_resultMobile.scss
+++ b/scss/device/result/_resultMobile.scss
@@ -9,7 +9,7 @@ $color2: rgb(198,164,126);
     }
     //START: Form section
     .hForm {
-        background-image: url(/result/rFormBg.jpg);
+        background-image: url(../result/rFormBg.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
