--- a/scss/device/desc/_mobile.scss
+++ b/scss/device/desc/_mobile.scss
@@ -26,6 +26,9 @@
         }
 
         .main-content {
+            display: flex;
+            flex-direction: column-reverse;
+            row-gap: 4vh;
             .left {
                 display: flex;
                 flex-direction: column;
@@ -35,6 +38,20 @@
                     display: flex;
                     flex-direction: column;
                     row-gap: 1vh;
+                    .amenities {
+                        display: flex;
+                        flex-direction: column;
+                        row-gap: 1vh;
+                        span {
+                            font-weight: bold;
+                        }
+                        ul {
+                            padding-left: 2vh;
+                        }
+                         li {
+                            list-style-type: circle;
+                         }
+                    }
                 }
             }
             .info-banner {
@@ -55,6 +72,49 @@
                         }
                     }
                 }
+            }
+            .right {
+             display: flex;
+             flex-direction: column;
+             row-gap: 1vh;
+             >button {
+                color: white;
+                background-color: #C6A47E;
+                border:none;
+                height: 4vh;
+             }
+             .top, .bottom {
+                display: flex;
+                justify-content: space-between;
+                // column-gap: 1vh;
+                .block {
+                    display:flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: black;
+                    width: 100%;
+                    padding: 0.5vh 0.5vh 1vh 0.5vh;
+                    row-gap: 0.5vh;
+                    p {
+                        color: white;
+                    }
+                    span {
+                        color: #C6A47E;
+                        font-size: 32px;
+                        font-weight: bold;
+                    }
+                    button {
+                        color: white;
+                        background-color: #C6A47E;
+                        padding: 0.7vh;
+                        text-align: center;
+                        width: 15vh;
+                border:none;
+
+                    }
+                }
+             }
             }
         }
     
