--- a/scss/device/home/_homeDesktop.scss
+++ b/scss/device/home/_homeDesktop.scss
@@ -5,7 +5,7 @@
         justify-content: center;
         form {
             flex-direction: row;
-            column-gap: 3vh;
+            column-gap: 5vh;
             align-items: baseline;
             padding: 7vh 0;
             height: 25%;
@@ -16,15 +16,10 @@
             flex-direction: column;
             align-items: baseline;
             row-gap: 1vh;
-            width: 18vh;
+            width: 14vh;
         }
-        .hPeople {
-            width: 24vh;
-            padding-right: 3vh;
-        }
-        [for="child"]{
-            display: flex;
-            flex-direction: column;
+        .hLocation {
+            width: 27vh;
         }
         [type="submit"]{
             align-self: center;
@@ -34,27 +29,16 @@
     //START: Popular destination section
     .hDestination {
         > article {
-            width: 100vh;
-        }
-        .hRichmond {
-            display: flex;
-            flex-direction: column-reverse;
-        }
-        figure {
-            width: 30vh;
+            width: 80%;
         }
     }
     //END: Popular destination section
     //START: Special offer section
     .specialOffer {
         > article {
-            width: 100vh;
-        }
-        .hSpe3 {
-            display: flex;
-        }
-        a {
-            width: 30vh;
+            width: 80%;
+            justify-content: left;
+            column-gap: 20%;
         }
     }
     //END: Special offer section
