--- a/scss/device/home/_homeTablet.scss
+++ b/scss/device/home/_homeTablet.scss
@@ -4,7 +4,6 @@
         padding-left: 10%;
         justify-content: left;
         input,
-        button,
         option {
             transition: .2s;
             &:hover {
@@ -24,24 +23,21 @@
     //START: Popular destination section
     .hDestination {
         > article {
-            width: 70vh;
+            width: 80vh;
         }
-        .hBurnaby {
-            display: flex;
-            flex-direction: column-reverse;
-        }
-        button {
-            height: 20vh;
-            align-self: flex-end;
-            transition: .4s;
-            &:hover {
-                background-color: whitesmoke;
-            }
+        > section {
+            flex-direction: row;
+            gap: 5vh;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         figure {
-            width: 32vh;
+            width: 38vh;
             position: relative;
             overflow: hidden;
+            border: 5px double $color1;
+            border-radius: 3px;
+            padding: 4px;
             &:hover figcaption{
                 display: flex;
                 flex-direction: column;
@@ -59,16 +55,17 @@
             bottom: -20%;
             row-gap: 3vh;
             transition: .6s;
+            font-size: 20px;
             h3 {
                 color: whitesmoke;
             }
         }
         img {
-            height: 20vh;
+            height: 24vh;
         }
         input {
-            height: 4vh;
-            width: 4vh;
+            height: 4.5vh;
+            width: 4.5vh;
             transition: .4s;
             &:hover{
                 color: $color2;
@@ -80,28 +77,40 @@
     //START: Special offer section
     .specialOffer {
         > article {
-            width: 70vh;
+            width: 80vh;
+            display: flex;
+            justify-content: space-between;
+        }
+        > section {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 5vh;
+        }
+        img {
+            height: 20vh;
         }
         a {
             transition: .4s;
-            width: 32vh;
+            width: 28vh;
+            h4 {
+                font-size: 14px;
+            }
+            i {
+                font-size: 24px;
+            }
             &:hover {
                 background-color: $color2;
             }
-            i {
+            > article {
+                height: 24vh;
+                justify-content: center;
+            }
+            figcaption i {
                 transition: .4s;
                 &:hover {
                     color: red;
                 }
-            }
-        }
-        .hSpe2 {
-            display: flex;
-        }
-        button {
-            transition: .4s;
-            &:hover {
-                background-color: whitesmoke;
             }
         }
     }
