--- a/scss/device/desc/_desktop.scss
+++ b/scss/device/desc/_desktop.scss
@@ -1,19 +1,25 @@
 @media (min-width:1000px) {
-    .body-desc{
-        padding: 9vh;
-        row-gap: 5vh;
 
+    .container {
+        display: flex;
+        justify-content: center;
+    }
+    .body-desc{
+        // padding: 20vh;
+        row-gap: 5vh;
+        width: 65%;
         .gallery{
 
             .banner {
-                height: 90vh;
+                height: 50vh;
             }
 
             figure {
-                row-gap: 5vh;
-
+                flex-wrap: nowrap;
                 img {
-                    height: 40vh;
+                    height: 30vh;
+                    width: 25%;
+
                 }
             }
         }
