--- a/scss/device/desc/_mobile.scss
+++ b/scss/device/desc/_mobile.scss
@@ -5,6 +5,7 @@
         display:flex;
         flex-direction: column;
         row-gap: 1vh;
+
         .gallery {
             display: flex;
             flex-direction: column;
@@ -12,6 +13,8 @@
             .banner {
                 width: 100%;
                 height: 25vh;
+                border-radius: 3px;
+
             }
             figure {
                 display: flex;
@@ -21,6 +24,8 @@
                 img {
                     width: 48%;
                     height: 15vh;
+                border-radius: 3px;
+
                 }
             }
         }
