--- a/scss/device/home/_homeTablet.scss
+++ b/scss/device/home/_homeTablet.scss
@@ -2,7 +2,7 @@
     //START: Form section
     .hLayer {
         padding-left: 10%;
-        justify-content: left;
+        align-items: flex-start;
         input,
         option {
             transition: .2s;
