--- a/scss/device/home/_homeMobile.scss
+++ b/scss/device/home/_homeMobile.scss
@@ -4,7 +4,7 @@ $color2: rgb(198,164,126);
     .home {
         display: flex;
         flex-direction: column;
-        row-gap: 5vh;
+        row-gap: 10vh;
         align-items: center;
         padding-bottom: 10vh;
     }
@@ -19,13 +19,16 @@ $color2: rgb(198,164,126);
     .hLayer {
         background-color: rgba($color: $color1, $alpha: 0.7);
         display: flex;
+        flex-direction: column;
+        row-gap: 2vh;
         justify-content: center;
         align-items: center;
-        height: 60vh;
+        min-height: 60vh;
+        padding: 2vh 0;
         form {
             background-color: rgba($color: $color1, $alpha: 1);
             color: whitesmoke;
-            height: 85%;
+            height: 45vh;
             width: 50vh;
             display: flex;
             flex-direction: column;
@@ -90,8 +93,48 @@ $color2: rgb(198,164,126);
             padding: 5px;
             border: 3px solid $color2;
         }
-    } 
+    }
     //END: Form section
+    //START: Accordion section
+    .accordion {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+        background-color: rgba($color: $color1, $alpha: 1);
+        color: whitesmoke;
+        width: 50vh;
+    
+        input {
+            display: none; //hiding the checkbox
+        }
+        label {	
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding:2%;
+            background-color: $color1;
+            font-size: 18px;
+            font-weight: 600;
+        }
+        label,img {
+            transition: .6s;
+            width: 96%;
+        }
+        img {
+            width: 100%;
+            height: 0;
+        }
+        //checked: when type=checkbox is clicked
+        input:checked + label + img {	
+            height: 40vh;
+        }
+        input:checked + label i {
+            transform: rotate(180deg);
+        }
+    }
+    //END: Accordion section
     //START: PopulardDestination section
     .hDestination {
         display: flex;
