htmlCss-home: organized folder and files

--- a/scss/device/home/_homeMobile.scss
+++ b/scss/device/home/_homeMobile.scss
@@ -10,7 +10,7 @@ $color2: rgb(198,164,126);
     }
     //START: Form section
     .hForm {
-        background-image: url(../home/hFormBG.jpg);
+        background-image: url(../home/inc/img/hFormBG.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
