--- a/scss/device/result/_resultMobile.scss
+++ b/scss/device/result/_resultMobile.scss
@@ -4,12 +4,13 @@ $color2: rgb(198,164,126);
     .result {
         display: flex;
         flex-direction: column;
-        row-gap: 3vh;
+        row-gap: 10vh;
         align-items: center;
+        padding-bottom: 10vh;
     }
     //START: Form section
     .hForm {
-        background-image: url(../result/rFormBg.jpg);
+        background-image: url(../result/inc/img/rFormBG.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -18,13 +19,16 @@ $color2: rgb(198,164,126);
     .hLayer {
         background-color: rgba($color: $color1, $alpha: 0.7);
         display: flex;
+        flex-direction: column;
+        row-gap: 2vh;
         justify-content: center;
         align-items: center;
-        height: 60vh;
+        min-height: 60vh;
+        padding: 2vh 0;
         form {
             background-color: rgba($color: $color1, $alpha: 1);
             color: whitesmoke;
-            height: 85%;
+            height: 45vh;
             width: 50vh;
             display: flex;
             flex-direction: column;
@@ -36,7 +40,7 @@ $color2: rgb(198,164,126);
             font-weight: 600;
         }
         aside {
-            width: 60%;
+            width: 90%;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -45,42 +49,8 @@ $color2: rgb(198,164,126);
         .hLocation {
             align-items: baseline;
         }
-        .hPeople {
-            flex-direction: column;
-            align-items: baseline;
-            > section {
-                display: flex;
-                flex-direction: column;
-                row-gap: 1vh;
-                width: 100%;
-                font-size: 16px;
-            }
-        }
-        article {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            section {
-                display: flex;
-                width: 40%;
-                justify-content: space-between;
-                align-items: center;
-            }
-            button {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                font-size: 24px;
-                border: 2px solid black;
-                border-radius: 100%;
-                width: 3vh;
-                height: 3vh;
-            }
-        }
         input,
-        select,
-        button {
+        select {
             background-color: rgb(70,70,70);
             color: whitesmoke;
         }
@@ -107,8 +77,7 @@ $color2: rgb(198,164,126);
         //for Chrome, Safari
         [type="number"]::-webkit-outer-spin-button, 
         [type="number"]::-webkit-inner-spin-button { 
-            -webkit-appearance: none; 
-            margin: 0; 
+            -webkit-appearance: none;
         } 
         //for FireFox, IE
         [type="number"] {
@@ -124,8 +93,48 @@ $color2: rgb(198,164,126);
             padding: 5px;
             border: 3px solid $color2;
         }
-    } 
+    }
     //END: Form section
+    //START: Accordion section
+    .accordion {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+        background-color: rgba($color: $color1, $alpha: 1);
+        color: whitesmoke;
+        width: 50vh;
+    
+        input {
+            display: none; //hiding the checkbox
+        }
+        label {	
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding:2%;
+            background-color: $color1;
+            font-size: 18px;
+            font-weight: 600;
+        }
+        label,img {
+            transition: .6s;
+            width: 96%;
+        }
+        img {
+            width: 100%;
+            height: 0;
+        }
+        //checked: when type=checkbox is clicked
+        input:checked + label + img {	
+            height: 40vh;
+        }
+        input:checked + label i {
+            transform: rotate(180deg);
+        }
+    }
+    //END: Accordion section
     //START: Title section
     .rTitle {
         display: flex;
@@ -138,13 +147,55 @@ $color2: rgb(198,164,126);
         width: 90%;
         display: flex;
         flex-direction: column;
+        row-gap: 5vh;
         align-items: center;
-        row-gap: 6vh;
+        > article {
+            width: 40vh;
+            i {
+                width: 4vh;
+                text-align: center;
+            }
+            ul {
+                padding-left: 5vh;
+            }
+        }
+        >section {
+            display: flex;
+            flex-direction: column;
+            row-gap: 3vh;
+        } 
         a {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            width: 45vh;
+            width: 44vh;
+            > article {
+                width: 100%;
+                border: 1px solid $color2;
+                border-top: none;
+                display: flex;
+                flex-direction: column;
+                row-gap: 1vh;
+                align-items: center;
+                text-align: center;
+                color: black;
+                padding: 2vh 0;
+            }
+            section {
+                width: 100%;
+                display: flex;
+                justify-content: space-evenly;
+            }
+            aside {
+                display: flex;
+                align-items: center;
+                column-gap: 1vh;
+            }
+            i {
+                font-size: 18px;
+            }
+            [class="fa-solid fa-person-half-dress"]{
+                font-size: 24px;
+            }
         }
         figure {
             position: relative;
@@ -155,7 +206,7 @@ $color2: rgb(198,164,126);
         }
         img {
             width: 100%;
-            height: 30vh;
+            height: 28vh;
         }
         figcaption {
             position: absolute;
@@ -176,29 +227,9 @@ $color2: rgb(198,164,126);
                 font-size: 30px;
             }
         }
-        article {
-            border: 1px solid $color2;
-            border-top: none;
+        span {
             display: flex;
-            flex-direction: column;
-            row-gap: 1vh;
-            align-items: center;
-            text-align: center;
-            color: black;
-            padding-top: 2vh;
-            > section {
-                width: 100%;
-                display: flex;
-                justify-content: space-evenly;
-            }
-            aside {
-                display: flex;
-                align-items: center;
-                column-gap: 1vh;
-            }
-            p {
-                width: 90%;
-            }
+            column-gap: 1vh;
         }
     }
     //END: List section
