--- a/scss/device/result/_resultTablet.scss
+++ b/scss/device/result/_resultTablet.scss
@@ -60,6 +60,9 @@
         .rAcm {
             transition: .4s;
             width: 28vh;
+            h3 {
+                font-size: 16px;
+            }
             h4 {
                 font-size: 14px;
             }
