--- a/scss/device/result/_resultMobile.scss
+++ b/scss/device/result/_resultMobile.scss
@@ -185,6 +185,7 @@ $color2: rgb(198,164,126);
         .rAcm {
             display: flex;
             flex-direction: column;
+            align-items: center;
             width: 44vh;
             > article {
                 width: 100%;
