--- a/scss/device/desc/_mobile.scss
+++ b/scss/device/desc/_mobile.scss
@@ -38,6 +38,7 @@
                 display: flex;
                 flex-direction: column;
                 row-gap: 1vh;
+
                 .description {
                     text-align: justify;
                     display: flex;
@@ -82,6 +83,23 @@
              display: flex;
              flex-direction: column;
              row-gap: 1vh;
+             h4 {
+                padding-top: 2vh;
+            }
+             .profile-user {
+                display: flex;
+                column-gap: 2vh;
+                align-items: center;
+                padding-left: 1vh;
+                padding-top: 2vh;
+    
+                .circle {
+                    width: 10vh;
+                    height: 10vh;
+                    border-radius: 50%;
+                }
+                font-size: 30px;
+             }
              >button {
                 color: white;
                 background-color: #C6A47E;
@@ -120,6 +138,8 @@
                     }
                 }
              }
+
+
             }
         }
     
