--- a/scss/device/desc/_mobile.scss
+++ b/scss/device/desc/_mobile.scss
@@ -5,6 +5,9 @@
         display:flex;
         flex-direction: column;
         row-gap: 1vh;
+        .fa-star {
+            color: #C6A47E;
+        }
 
         .gallery {
             display: flex;
@@ -38,6 +41,7 @@
                 display: flex;
                 flex-direction: column;
                 row-gap: 1vh;
+
 
                 .description {
                     text-align: justify;
