populate and form works connecting the database

--- a/scss/device/result/_resultMobile.scss
+++ b/scss/device/result/_resultMobile.scss
@@ -198,6 +198,11 @@ $color2: rgb(198,164,126);
                 text-align: center;
                 color: black;
                 padding: 2vh 0;
+                h3,
+                h4 {
+                    width: 95%;
+                    overflow-wrap: break-word;
+                }
             }
             section {
                 width: 100%;
