Finish Description Section

--- a/scss/device/desc/_mobile.scss
+++ b/scss/device/desc/_mobile.scss
@@ -37,10 +37,28 @@
             display: flex;
             flex-direction: column-reverse;
             row-gap: 4vh;
+
             .left {
                 display: flex;
                 flex-direction: column;
                 row-gap: 1vh;
+                .reviews {
+                display: flex;
+                flex-direction: column;
+                row-gap: 2vh;
+                    figure {
+                    display: flex;
+                    align-items: center;
+                    column-gap: 2vh;
+                    figcaption {
+                        width: 100%;
+                    }
+                    }
+                    img {
+                        width: 10vh;
+                        height: 10vh;
+                    }
+                }
 
 
                 .description {
