--- a/scss/device/desc/_mobile.scss
+++ b/scss/device/desc/_mobile.scss
@@ -52,6 +52,7 @@
                     column-gap: 2vh;
                     figcaption {
                         width: 100%;
+                        text-align: justify;
                     }
                     }
                     img {
