connection with database, form to jump to result page done:home

--- a/scss/device/home/_homeDesktop.scss
+++ b/scss/device/home/_homeDesktop.scss
@@ -48,8 +48,7 @@
     .specialOffer {
         > article {
             width: 80%;
-            justify-content: left;
-            column-gap: 20%;
+            justify-content: space-between;
         }
     }
     //END: Special offer section
