Fixes and code optimization

--- a/scss/device/_desktop.scss
+++ b/scss/device/_desktop.scss
@@ -1,4 +1,4 @@
-@import 'home/homeDesktop';+
+@import 'home/homeDesktop';
 @import 'desc/desktop';
 @import 'result/resultDesktop';
-@import 'footer/footerDesktop';+
+@import 'footer/footerDesktop';
