--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -8,3 +8,5 @@ $desktopScreen  :   1000px;
 
 
 //Google Font
+@import url(https://fonts.googleapis.com/css2?family=Playfair:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap);
+$font           : "Playfair", sans-serif;
