--- a/scss/device/headerandnav/_headermobile.scss
+++ b/scss/device/headerandnav/_headermobile.scss
@@ -5,7 +5,6 @@ $color2: rgb(198,164,126);
     .head {
         display: flex;
         flex-direction: column;
-        padding-bottom: 5vh;
         
     
         a {
@@ -83,7 +82,7 @@ $color2: rgb(198,164,126);
     }
 
     .headbg {
-        background-image: url(/header/inc/img/2.jpg);
+        background-image: url("../header/inc/img/2.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
