--- a/scss/device/result/_resultMobile.scss
+++ b/scss/device/result/_resultMobile.scss
@@ -202,6 +202,9 @@ $color2: rgb(198,164,126);
                 h4 {
                     width: 95%;
                     overflow-wrap: break-word;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
                 }
             }
             section {
@@ -221,6 +224,18 @@ $color2: rgb(198,164,126);
                 font-size: 24px;
             }
         }
+        .shiver{  
+            animation-name: room-shiver;
+            animation-duration: 0.3s;
+            animation-iteration-count: infinite;
+        }
+        @keyframes room-shiver {
+            0%{ transform:rotate(0);}
+            25%{ transform:rotate(10deg);}
+            50%{ transform:rotate(0deg);}
+            75%{ transform:rotate(-10deg);}
+            100%{ transform:rotate(0deg);}
+        } 
         figure {
             position: relative;
             display: flex;
@@ -244,7 +259,16 @@ $color2: rgb(198,164,126);
                 padding: 5px;
             }
             h4 {
+                display: flex;
+                column-gap: 1vh;
                 color: whitesmoke;
+            }
+            div {
+                transform: rotate(10deg);
+            }
+            del {
+                color: red;
+                font-size: 12px;
             }
             i {
                 color: orange;
