done for normal  users: signUp

--- a/scss/device/_mobile.scss
+++ b/scss/device/_mobile.scss
@@ -1,5 +1,6 @@
 
 @import './login/loginmobile';
+@import './signUp/signUpmobile';
 
 @import './headerandnav/headermobile';
 @import 'home/homeMobile';
