--- a/scss/device/_tablel.scss
+++ b/scss/device/_tablel.scss
@@ -1,4 +1,5 @@
 @import './login/logintablet';
+@import './signUp/signUptablet';
 @import './headerandnav/headertablet';
 @import 'home/homeTablet';
 @import 'desc/tablet';
