done using my local database

--- a/scss/device/_desktop.scss
+++ b/scss/device/_desktop.scss
@@ -1,4 +1,5 @@
 @import './login/logindesktop';
+@import './signUp/signUpdesktop';
 @import './headerandnav/headerdesktop';
 @import 'home/homeDesktop';
 @import 'desc/desktop';
