--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -4,7 +4,8 @@ $tabletScreen   :   700px;
 $desktopScreen  :   1000px;
 
 //Color
-
+$color1     : rgb(34,34,34);
+$color2     : rgb(198,164,126);
 
 
 //Google Font
